# gptflow

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  example.docker-compose.prod.yaml  example.traefik.prod.toml  gunicorn_conf.py  main.py  metadata.py  pyproject.toml
migrations/: env.py
migrations/versions/: a1ea50e7310c_add_new_fields_for_gpt_function_params_.py  bb693e215633_create_table_for_gpt_functions_metadata.py  d67f336efaa0_create_table_for_gpt_function_parameters.py
